# speech_course

./: .gitignore  pyproject.toml
week_01_DSP/: transforms.py
week_02_vad_sed/: homework.ipynb  seminar.ipynb
week_03_kws_bio/: homework.ipynb  seminar.ipynb
week_04_asr/: homework.ipynb  seminar.ipynb
week_05_pretraining_asr/: seminar.ipynb
week_06_asr_inference/: asr_inference_seminar.ipynb
